--- a/package.json
+++ b/package.json
@@ -3,22 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
     "@types/react": "^18.3.2",
     "@types/react-redux": "^7.1.33",
+    "@types/react-router-bootstrap": "^0.26.6",
+    "@types/react-toastify": "^4.1.0",
     "@types/redux": "^3.6.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "install": "^0.13.0",
+    "npm": "^10.8.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "sass": "^1.77.2",
     "typescript": "3.7.2",
+    "web-vitals": "^4.2.0",
     "webpack": "^4.41.0"
   },
   "scripts": {
