--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "install": "^0.13.0",
+    "iso-639-1": "^3.1.3",
     "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
