--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
