--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/redux": "^3.6.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "i18next": "23.7.18",
+    "i18next-browser-languagedetector": "7.1.0",
+    "i18next-http-backend": "2.4.1",
     "install": "^0.13.0",
     "iso-639-1": "^3.1.3",
     "npm": "^10.8.1",
@@ -20,6 +23,7 @@
     "react-bootstrap": "^2.10.3",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "13.2.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.2",
