--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-http-backend": "2.4.1",
     "install": "^0.13.0",
     "iso-639-1": "^3.1.3",
+    "moment": "^2.30.1",
     "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
