--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "sass": "^1.77.2",
+    "socket.io-client": "^4.8.1",
     "typescript": "3.7.2",
     "web-vitals": "^4.2.0",
     "webpack": "^4.41.0"
