--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-http-backend": "2.4.1",
     "install": "^0.13.0",
     "iso-639-1": "^3.1.3",
+    "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "npm": "^10.8.1",
     "react": "^18.3.1",
@@ -61,6 +62,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^18.3.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17"
   }
 }
