--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
+    "emoji-picker-react": "^4.12.2",
     "i18next": "23.7.18",
     "i18next-browser-languagedetector": "7.1.0",
     "i18next-http-backend": "2.4.1",
