--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "webpack": "^4.41.0"
   },
   "scripts": {
-   "deploy": "NODE_OPTIONS='--max-old-space-size=512' GENERATE_SOURCEMAP=false npm run build && sudo nginx -s reload && echo '✅ Deployed!'",
-    "start": "react-scripts start",
+   "deploy": "NODE_OPTIONS='--max-old-space-size=512' NODE_NO_WARNINGS=1 GENERATE_SOURCEMAP=false npm run build && sudo nginx -s reload && echo '✅ Deployed!",
+     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
